# sycl-fpga-vector-add

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
scripts/: run_cmake_build.sh  run_cmake_compile.sh  run_cmake_package.sh
src/: CMakeLists.txt  algebra_ops.cpp  fpga_vector_add.cpp
